still trying to fix bug with camera component being too short in viewport height

--- a/src/App.css
+++ b/src/App.css
@@ -537,14 +537,11 @@ h1, h4, h5 {
 .camera-container {
   position: absolute;
   top: -54px;
-  /* top: 0; */
   left: 0;
   width: 100vw;
-  height: 100vh;
   background-color: var(--white);
   display: flex;
   flex-direction: column;
-  /* justify-content: space-around; */
   align-items: center;
   z-index: 10;
 }
@@ -555,8 +552,7 @@ h1, h4, h5 {
   align-items: center;
   background-color: rgba(31, 31, 31, .2);
   width: calc(100% - 26px);
-  padding: 0 13px;
-  height: 15%;
+  padding: 25px 13px;
   position: relative;
 }
 
@@ -568,7 +564,6 @@ h1, h4, h5 {
 }
 
 .camera-preview-wrapper {
-  height: 50%;
   padding: 60px 15px;
   display: flex;
   justify-content: center;
@@ -576,14 +571,14 @@ h1, h4, h5 {
 }
 
 .camera-preview {
-  height: 287px;
+  height: 40vh;
   width: 100%;
   object-fit: cover;
 }
 
 .camera-bottom {
   width: 100vw;
-  height: 35%;
+  padding: 12vh 0;
   display: flex;
   justify-content: center;
   align-items: center;
